Setup RQ worker and FastAPI integration with Qdrant
- Configure FastAPI server with /chat and /job-status endpoints
- Implement RQ worker with Redis queue for async job processing
- Add Dockerfile and docker-compose configuration for containerized worker
- Fix relative imports in server.py and configure Redis connection
- Integrate Qdrant vector database for document retrieval
- Fix worker host connection to use host.docker.internal for Docker compatibility
- Remove Windows-only pywin32 dependency for cross-platform support
- Complete RAG pipeline with FastAPI, Redis Queue, and Qdrant

--- a/ragQueue/docker-compose.yml
+++ b/ragQueue/docker-compose.yml
@@ -3,3 +3,16 @@ services:
     image: valkey/valkey
     ports:
       - "6379:6379"
+  
+  worker:
+    build:
+      context: ..
+      dockerfile: ragQueue/Dockerfile
+    command: rq worker
+    depends_on:
+      - valkey
+    environment:
+      - REDIS_HOST=valkey
+      - REDIS_PORT=6379
+    volumes:
+      - ..:/app
